--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
+/[Ee]xports/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
@@ -63,3 +64,5 @@ crashlytics-build.properties
 .vsconfig
 extensions.json
 launch.json
+
+.DS_Store
